commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -1,23 +1,23 @@
 ---
-title: Migrer d’ASP.NET Core 2.1 vers 2.2
+title: Migrer de ASP.NET Core 2,1 à 2,2
 author: scottaddie
-description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
+description: Cet article décrit les conditions préalables et les étapes les plus courantes pour la migration d’un projet ASP.NET Core 2,1 vers ASP.NET Core 2,2.
 ms.author: scaddie
 ms.custom: mvc
 ms.date: 05/28/2019
 uid: migration/21-to-22
-ms.openlocfilehash: c116d260bc742820dd23d7ec7347d84645773ba7
-ms.sourcegitcommit: 8516b586541e6ba402e57228e356639b85dfb2b9
+ms.openlocfilehash: ac87d97a259c230c01d236e84d6e42b28adad7e0
+ms.sourcegitcommit: 257cc3fe8c1d61341aa3b07e5bc0fa3d1c1c1d1c
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 07/11/2019
-ms.locfileid: "67814120"
+ms.lasthandoff: 08/19/2019
+ms.locfileid: "69583564"
 ---
-# <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
+# <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer de ASP.NET Core 2,1 à 2,2
 
 Par [Scott Addie](https://github.com/scottaddie)
 
-Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.
+Cet article explique comment mettre à jour un projet ASP.NET Core 2,1 existant vers ASP.NET Core 2,2.
 
 ## <a name="prerequisites"></a>Prérequis
 
@@ -37,42 +37,42 @@ Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 exist
 
 ## <a name="update-target-framework-moniker-tfm"></a>Mettre à jour le Moniker du Framework cible
 
-Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks) d’une version supérieure ou égale à .NET Core 2.2. Dans le fichier projet, mettez à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:
+Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks) d’une version supérieure ou égale à .net Core 2,2. Dans le fichier projet, mettez à `<TargetFramework>` jour le texte interne du `netcoreapp2.2`nœud avec:
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :
+Les projets ciblant .NET Framework peuvent continuer à utiliser le TFM d’une version supérieure ou égale à .NET Framework 4.6.1:
 
 ```xml
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="adopt-the-iis-in-process-hosting-model"></a>Adopter le modèle d’hébergement intra-processus IIS
+## <a name="adopt-the-iis-in-process-hosting-model"></a>Adopter le modèle d’hébergement in-process IIS
 
-Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:host-and-deploy/iis/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :
+Pour adopter le [modèle d’hébergement in-process pour IIS](xref:host-and-deploy/iis/index#in-process-hosting-model), ajoutez `<AspNetCoreHostingModel>` la propriété `InProcess` avec une `<PropertyGroup>` valeur à dans le fichier projet:
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-Le modèle d’hébergement intra-processus n’est pas pris en charge pour les applications ASP.NET Core ciblant .NET Framework.
+Le modèle d’hébergement in-process n’est pas pris en charge pour les applications de ASP.NET Core ciblant .NET Framework.
 
 Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.
 
-## <a name="update-a-custom-webconfig-file"></a>Mettre à jour un fichier web.config personnalisée
+## <a name="update-a-custom-webconfig-file"></a>Mettre à jour un fichier Web. config personnalisé
 
-Pour les projets qui utilisent un personnalisé *web.config* fichier dans la racine du projet pour générer leurs publié *web.config* fichier :
+Pour les projets qui utilisent un fichier *Web. config* personnalisé dans la racine du projet pour générer leur fichier *Web. config* publié:
 
-* Dans le `<handlers>` entrée qui ajoute le Module ASP.NET Core (`name="aspNetCore"`), modifiez le `modules` valeur à partir de l’attribut `AspNetCoreModule` à `AspNetCoreModuleV2`.
-* Dans le `<aspNetCore>` élément, ajoutez l’attribut de modèle hébergement (`hostingModel="InProcess"`).
+* Dans l' `<handlers>` entrée qui ajoute le module ASP.net Core (`name="aspNetCore"`), remplacez `AspNetCoreModuleV2`la `modules` valeur de l' `AspNetCoreModule` attribut par.
+* Dans l' `<aspNetCore>` élément, ajoutez l’attribut de modèle d'`hostingModel="InProcess"`hébergement ().
 
-Pour plus d’informations et exemple *web.config* de fichiers, consultez <xref:host-and-deploy/aspnet-core-module#configuration-with-webconfig>.
+Pour plus d’informations et pour obtenir des exemples de fichiers <xref:host-and-deploy/aspnet-core-module#configuration-with-webconfig> *Web. config* , consultez.
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
-Si vous ciblez .NET Core, supprimez la référence métapackage `Version` attribut dans le fichier projet. Inclusion d’un `Version` attribut entraîne l’avertissement suivant :
+Si vous ciblez .net Core, supprimez l’attribut `Version` de la référence du package dans le fichier projet. L’inclusion d' `Version` un attribut entraîne l’avertissement suivant:
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
@@ -80,7 +80,7 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 
 Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.
 
-La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :
+La référence au package de packages doit ressembler au nœud suivant `<PackageReference />` :
 
 ```xml
 <ItemGroup>
@@ -88,7 +88,7 @@ La référence métapackage doit ressembler à ce qui suit `<PackageReference />
 </ItemGroup>
 ```
 
-Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure. Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :
+Si vous ciblez .NET Framework, mettez à jour `Version` l’attribut de chaque référence de package vers 2.2.0 ou version ultérieure. Voici les références de package dans un projet ASP.NET Core 2,2 ciblant .NET Framework:
 
 ```xml
 <ItemGroup>
@@ -100,7 +100,7 @@ Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Ver
 </ItemGroup>
 ```
 
-Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure. Cela génère l’erreur suivante :
+Si vous référencez le package [Microsoft. AspNetCore. Razor. Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) , `Version` mettez à jour son attribut sur 2.2.0 ou une version ultérieure. Dans le cas contraire, l’erreur suivante se produit:
 
 ```console
 Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.2. Reference the package directly from the project to select a different version.
@@ -108,7 +108,7 @@ Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
 
-Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :
+Si votre solution repose sur un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à `version` jour sa propriété sur la version 2,2 installée sur votre ordinateur:
 
 ```json
 {
@@ -120,13 +120,13 @@ Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json
 
 ## <a name="update-launch-settings"></a>Mettre à jour les paramètres de lancement
 
-Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet ( *.vscode/launch.json*). Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :
+Si vous utilisez Visual Studio Code, mettez à jour le fichier de paramètres de lancement du projet ( *. vscode/Launch. JSON*). Le `program` chemin d’accès doit référencer le nouvel TFM:
 
 [!code-json[](21-to-22/samples/launch.json?highlight=9)]
 
-## <a name="update-kestrel-configuration"></a>Mettre à jour de configuration de Kestrel
+## <a name="update-kestrel-configuration"></a>Mettre à jour la configuration Kestrel
 
-Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> en appelant `CreateDefaultBuilder` dans le [CreateWebHostBuilder méthode](xref:fundamentals/host/web-host#set-up-a-host) de la `Program` classe, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter est en conflit avec le [IIS dans le processus modèle d’hébergement](xref:host-and-deploy/iis/index#in-process-hosting-model):
+Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> en appelant `CreateDefaultBuilder` dans la [méthode CreateWebHostBuilder](xref:fundamentals/host/web-host#set-up-a-host) de la `Program` classe, appelez `ConfigureKestrel` pour configurer Kestrel Server au lieu `UseKestrel` de afin d’éviter les conflits avec [IIS modèle d’hébergement in-process](xref:host-and-deploy/iis/index#in-process-hosting-model):
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -138,7 +138,7 @@ public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
         });
 ```
 
-Si l’application n’appelle pas `CreateDefaultBuilder` et génère l’hôte manuellement dans le `Program` classe, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** appelant `ConfigureKestrel`:
+Si l’application n’appelle `CreateDefaultBuilder` pas et ne génère pas l’hôte `Program` manuellement dans la <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> `ConfigureKestrel`classe, appelez **avant** d’appeler:
 
 ```csharp
 public static void Main(string[] args)
@@ -160,9 +160,9 @@ public static void Main(string[] args)
 
 Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.
 
-## <a name="update-compatibility-version"></a>Version de compatibilité de mise à jour
+## <a name="update-compatibility-version"></a>Mettre à jour la version de compatibilité
 
-Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:
+Mettez à jour la version `Startup.ConfigureServices` de `Version_2_2`compatibilité dans:
 
 ```csharp
 services.AddMvc()
@@ -171,37 +171,37 @@ services.AddMvc()
 
 ## <a name="update-cors-policy"></a>Mettre à jour la stratégie CORS
 
-Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification. Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS. Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).
+Dans ASP.net Core 2,2, l’intergiciel (middleware) cors répond avec une origine`*`générique () si une stratégie autorise l’origine et autorise les informations d’identification. Les informations d’identification ne sont pas prises en`*`charge lorsqu’une origine générique () est spécifiée, et les navigateurs interdisent la demande cors. Pour plus d’informations, notamment sur les options permettant de corriger le problème sur le client, consultez les [documents Web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).
 
-Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :
+Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes:
 
-* Modifier la stratégie CORS pour ne plus autoriser les informations d’identification. Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.
-* Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés. Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.
+* Modifiez la stratégie CORS de sorte qu’elle n’autorise plus les informations d’identification. Autrement dit, supprimez l’appel <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> à lors de la configuration de la stratégie.
+* Si des informations d’identification sont requises pour que la demande CORS aboutisse, modifiez la stratégie pour spécifier les hôtes autorisés. Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>la place de.
 
-## <a name="update-docker-images"></a>Mettre à jour des images Docker
+## <a name="update-docker-images"></a>Mettre à jour les images de l’ancrage
 
-Le tableau suivant montre l’image Docker de modifications de la balise :
+Le tableau suivant montre les modifications apportées aux balises d’image de l’Ancreur:
 
-| 2.1                                       | 2.2                                       |
-| ----------------------------------------- | ----------------------------------------- |
-| `microsoft/dotnet:2.1-aspnetcore-runtime` | `microsoft/dotnet:2.2-aspnetcore-runtime` |
-| `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
+| 2.1                                       | 2.2                                        |
+| ----------------------------------------- | -----------------------------------------  |
+| `microsoft/dotnet:2.1-aspnetcore-runtime` | `mcr.microsoft.com/dotnet/core/aspnet:2.2` |
+| `microsoft/dotnet:2.1-sdk`                | `mcr.microsoft.com/dotnet/core/sdk:2.2`    |
 
-Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.
+Modifiez les `FROM` lignes de votre *fichier dockerfile* pour utiliser les nouvelles balises d’image dans la colonne 2,2 du tableau précédent.
 
-## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a>Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement
+## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a>Générer manuellement dans Visual Studio lors de l’utilisation de l’hébergement in-process IIS
 
-De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:host-and-deploy/iis/index#in-process-hosting-model). Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement. Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.
+La **génération automatique** de Visual Studio sur l’expérience de requête de navigateur ne fonctionne pas avec le [modèle d’hébergement in-process IIS](xref:host-and-deploy/iis/index#in-process-hosting-model). Vous devez régénérer manuellement le projet lors de l’utilisation de l’hébergement in-process. Les améliorations apportées à cette expérience sont prévues dans une prochaine version de Visual Studio.
 
 ## <a name="update-logging-code"></a>Mettre à jour le code de journalisation
 
-Code de configuration de journalisation recommandée n’a pas changé 2.1 vers 2.2, mais certains modèles de codage 1.x fonctionnaient encore 2.1 n’est plus dans 2.2.
+Le code de configuration de journalisation recommandée n’est pas passé de 2,1 à 2,2, mais certains modèles de codage 1. x qui fonctionnaient toujours dans 2,1 ne fonctionnent plus en 2,2.
 
-Si votre application effectue l’initialisation de fournisseur de journalisation, le filtrage et la configuration du chargement dans le `Startup` class, déplacer ce code à `Program.Main`:
+Si votre application enregistre l’initialisation, le filtrage et le chargement de la configuration du `Startup` fournisseur dans la classe, déplacez `Program.Main`ce code vers:
 
-* Initialisation du fournisseur :
+* Initialisation du fournisseur:
 
-  exemple de 1.x :
+  exemple 1. x:
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -210,7 +210,7 @@ Si votre application effectue l’initialisation de fournisseur de journalisatio
   }
   ```
 
-  exemple 2.2 :
+  2,2 exemple:
 
   ```csharp
 
@@ -228,7 +228,7 @@ Si votre application effectue l’initialisation de fournisseur de journalisatio
 
 * Filtrage :
 
-  exemple de 1.x :
+  exemple 1. x:
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -240,7 +240,7 @@ Si votre application effectue l’initialisation de fournisseur de journalisatio
   }
   ```
 
-  exemple 2.2 :
+  2,2 exemple:
 
   ```csharp
   public static void Main(string[] args)
@@ -262,9 +262,9 @@ Si votre application effectue l’initialisation de fournisseur de journalisatio
   }
   ```
 
-* Chargement de la configuration :
+* Chargement de la configuration:
 
-  exemple de 1.x :
+  exemple 1. x:
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -273,7 +273,7 @@ Si votre application effectue l’initialisation de fournisseur de journalisatio
   }
   ```
 
-  exemple 2.2 :
+  2,2 exemple:
 
   ```csharp
   public static void Main(string[] args)
