--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -1,17 +1,17 @@
 ---
 title: Migrer de ASP.NET Core 2,2 vers la version préliminaire 3,0
-author: tdykstra
+author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
-ms.author: tdykstra
+ms.author: riande
 ms.custom: mvc
 ms.date: 08/17/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 3d93526d609da4f216d0ec943f24c542341c49fb
-ms.sourcegitcommit: 38cac2552029fc19428722bb204ff9e16eb94225
+ms.openlocfilehash: c70c167488b6a7ff3e1bbbc664b0df0dc13d9a74
+ms.sourcegitcommit: 8835b6777682da6fb3becf9f9121c03f89dc7614
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 08/18/2019
-ms.locfileid: "69573125"
+ms.lasthandoff: 08/22/2019
+ms.locfileid: "69975461"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -79,7 +79,7 @@ Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](h
 
 Pour utiliser Json.NET dans un projet ASP.NET Core 3,0:
 
-* Ajoutez une référence de package à [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+* Ajoutez une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
 * Mettez `Startup.ConfigureServices` à jour `AddNewtonsoftJson`pour appeler.
 
   ```csharp
