commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 08/17/2019
+ms.date: 08/26/2019
 uid: migration/22-to-30
-ms.openlocfilehash: c70c167488b6a7ff3e1bbbc664b0df0dc13d9a74
-ms.sourcegitcommit: 8835b6777682da6fb3becf9f9121c03f89dc7614
+ms.openlocfilehash: bc7aa288598a1f1da5731bab542b4cba9020bfb7
+ms.sourcegitcommit: 776598f71da0d1e4c9e923b3b395d3c3b5825796
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 08/22/2019
-ms.locfileid: "69975461"
+ms.lasthandoff: 08/26/2019
+ms.locfileid: "70024698"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -287,9 +287,9 @@ public class HomeController : ControllerBase
 }
 ```
 
-Si l’application utilise un `AuthorizeFilter` comme filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie à `UseAuthorization` l’intergiciel (middleware).
+Si l’application utilise un `AuthorizeFilter` comme filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie dans l’appel `AddAuthorization`à.
 
-Dans l’exemple suivant, une stratégie personnalisée à appliquer à toutes les demandes lorsque `UseAuthorization` est appelé, et le `HomeController` autorise l’accès sans que l’utilisateur se connecte à l’application:
+Le `DefaultPolicy` est initialement configuré pour exiger une authentification, de sorte qu’aucune configuration supplémentaire n’est requise. Dans l’exemple suivant, les points de terminaison MVC sont `RequireAuthorization` marqués comme afin que toutes les requêtes doivent être autorisées `DefaultPolicy`en fonction du. Toutefois, le `HomeController` autorise l’accès sans que l’utilisateur se `[AllowAnonymous]`connecte à l’application en raison des éléments suivants:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -299,7 +299,84 @@ public void Configure(IApplicationBuilder app)
     app.UseRouting();
 
     app.UseAuthentication();
-    app.UseAuthorization(new AuthorizationPolicyBuilder().Build()));
+    app.UseAuthorization();
+
+    app.UseEndpoints(endpoints =>
+    {
+        endpoints.MapDefaultControllerRoute().RequireAuthorization();
+    });
+}
+
+[AllowAnonymous]
+public class HomeController : ControllerBase
+{
+    ...
+}
+```
+
+Les stratégies peuvent également être personnalisées. En s’appuyant sur l’exemple `DefaultPolicy` précédent, le est configuré pour exiger une authentification et une étendue spécifique:
+
+```csharp
+public void ConfigureServices(IServiceCollection services)
+{
+    ...
+    
+    services.AddAuthorization(options =>
+    {
+        options.DefaultPolicy = new AuthorizationPolicyBuilder()
+          .RequireAuthenticatedUser()
+          .RequireScope("MyScope")
+          .Build();
+    });
+}
+
+public void Configure(IApplicationBuilder app)
+{
+    ...
+
+    app.UseRouting();
+
+    app.UseAuthentication();
+    app.UseAuthorization();
+
+    app.UseEndpoints(endpoints =>
+    {
+        endpoints.MapDefaultControllerRoute().RequireAuthorization();
+    });
+}
+
+[AllowAnonymous]
+public class HomeController : ControllerBase
+{
+    ...
+}
+```
+
+Sinon, tous les points de terminaison peuvent être configurés pour exiger `[Authorize]` l' `RequireAuthorization` autorisation sans ou en `FallbackPolicy`configurant un. `FallbackPolicy` Est différent `DefaultPolicy`de. Est déclenché par `[Authorize]` `FallbackPolicy` ou `RequireAuthorization`, tandis que est déclenché quand aucune autre stratégie n’est définie. `DefaultPolicy` `FallbackPolicy`est initialement configuré pour autoriser les demandes sans autorisation.
+
+L’exemple suivant est identique à l’exemple précédent `DefaultPolicy` , mais `FallbackPolicy` utilise pour toujours exiger l’authentification sur tous les points de terminaison `[AllowAnonymous]` sauf si est spécifié:
+
+```csharp
+public void ConfigureServices(IServiceCollection services)
+{
+    ...
+    services.AddAuthorization(options =>
+    {
+        options.FallbackPolicy = new AuthorizationPolicyBuilder()
+          .RequireAuthenticatedUser()
+          .RequireScope("MyScope")
+          .Build();
+    });
+}
+
+public void Configure(IApplicationBuilder app)
+{
+    ...
+
+    app.UseRouting();
+
+    app.UseAuthentication();
+    app.UseAuthorization();
 
     app.UseEndpoints(endpoints =>
     {
@@ -316,7 +393,7 @@ public class HomeController : ControllerBase
 
 L’autorisation par intergiciel fonctionne sans que l’infrastructure ait une connaissance spécifique de l’autorisation. Par exemple, les [contrôles d’intégrité](xref:host-and-deploy/health-checks) n’ont aucune connaissance spécifique de l’autorisation, mais les contrôles d’intégrité peuvent avoir une stratégie d’autorisation configurable appliquée par l’intergiciel (middleware).
 
-Dans l’exemple suivant, `UseAuthorization` traite l’autorisation sans une stratégie par défaut, `/healthz` mais le point de terminaison de contrôle d’intégrité requiert `admin` que l’utilisateur soit dans le rôle: 
+En outre, chaque point de terminaison peut personnaliser ses exigences d’autorisation. Dans l’exemple suivant, `UseAuthorization` traite l’autorisation `DefaultPolicy`avec, mais le `/healthz` point de terminaison de contrôle `admin` d’intégrité requiert un utilisateur:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
