--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 08/26/2019
+ms.date: 09/03/2019
 uid: migration/22-to-30
-ms.openlocfilehash: bc7aa288598a1f1da5731bab542b4cba9020bfb7
-ms.sourcegitcommit: 776598f71da0d1e4c9e923b3b395d3c3b5825796
+ms.openlocfilehash: c53357f1cebad1e148925052c84bc3b3d8de4d8b
+ms.sourcegitcommit: e6bd2bbe5683e9a7dbbc2f2eab644986e6dc8a87
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 08/26/2019
-ms.locfileid: "70024698"
+ms.lasthandoff: 09/03/2019
+ms.locfileid: "70238117"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -47,13 +47,21 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant 
 
 * Supprimez `<PackageReference>` tout dans le package [Microsoft. AspNetCore. Razor. Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) .
 
+* Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers), `<PackageReference>` supprimez tout élément du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) . Modifiez votre fichier projet pour utiliser l’analyseur fourni dans le cadre de la kit SDK .NET Core :
+
+```xml
+<PropertyGroup>
+ <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+</PropertyGroup>
+```
+
 * Met à `Version` jour l’attribut `<PackageReference>` sur les `Microsoft.AspNetCore.*` éléments restants pour les packages vers l' `3.0.0-preview5-19227-01`aperçu actuel (par exemple,).
 
   S’il n’existe aucune version 3,0 d’un package, le package peut avoir été déconseillé dans 3,0. Un grand nombre de ces packages font `Microsoft.AspNetCore.App` partie de et ne doivent pas être référencés individuellement. Pour obtenir une liste préliminaire des packages qui ne sont plus produits dans 3,0, consultez [arrêter la production de packages pour les assemblys de Framework partagé dans 3,0 (ASPNET/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et référencés par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
 * Les assemblys de plusieurs composants notables ont été `Microsoft.AspNetCore.App` supprimés de dans 3,0. Ajoutez `<PackageReference>` des éléments si vous utilisez des API à partir de packages listés dans des [assemblys en cours de suppression de Microsoft. AspNetCore. app 3,0 (ASPNET/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
 
-  Voici quelques exemples de composants supprimés:
+  Voici quelques exemples de composants supprimés :
 
   * `Microsoft.AspNet.WebApi.Client`
   * `Microsoft.EntityFrameworkCore`
@@ -77,7 +85,7 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant 
 
 Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [JSON.net](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de la ASP.net Core Framework partagé.
 
-Pour utiliser Json.NET dans un projet ASP.NET Core 3,0:
+Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
 
 * Ajoutez une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
 * Mettez `Startup.ConfigureServices` à jour `AddNewtonsoftJson`pour appeler.
@@ -87,7 +95,7 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3,0:
       .AddNewtonsoftJson();
   ```
   
-  `AddNewtonsoftJson`est compatible avec les nouvelles méthodes d’inscription de service MVC:
+  `AddNewtonsoftJson`est compatible avec les nouvelles méthodes d’inscription de service MVC :
 
   * `AddRazorPages`
   * `AddControllersWithViews`
@@ -98,7 +106,7 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3,0:
       .AddNewtonsoftJson();
   ```
 
-  Les paramètres Json.NET peuvent être définis dans l’appel `AddNewtonsoftJson`à:
+  Les paramètres Json.NET peuvent être définis dans l’appel `AddNewtonsoftJson`à :
 
   ```csharp
   services.AddMvc()
@@ -113,7 +121,7 @@ ASP.NET Core 3,0 ajoute de nouvelles options pour l’inscription de `Startup.Co
 
 Trois nouvelles méthodes d’extension de niveau supérieur liées aux scénarios MVC `IServiceCollection` sur sont disponibles. Les modèles utilisent ces nouvelles méthodes à `UseMvc`la place de. Toutefois, `AddMvc` continue à se comporter comme dans les versions précédentes.
 
-L’exemple suivant ajoute la prise en charge des contrôleurs et des fonctionnalités liées à l’API, mais pas aux vues ou aux pages. Le modèle d’API utilise ce code:
+L’exemple suivant ajoute la prise en charge des contrôleurs et des fonctionnalités liées à l’API, mais pas aux vues ou aux pages. Le modèle d’API utilise ce code :
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -122,7 +130,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-L’exemple suivant ajoute la prise en charge des contrôleurs, des fonctionnalités liées à l’API et des vues, mais pas des pages. Le modèle d’application Web (MVC) utilise ce code:
+L’exemple suivant ajoute la prise en charge des contrôleurs, des fonctionnalités liées à l’API et des vues, mais pas des pages. Le modèle d’application Web (MVC) utilise ce code :
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -131,7 +139,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-L’exemple suivant ajoute la prise en charge de Razor Pages et de la prise en charge minimale du contrôleur. Le modèle d’application Web utilise ce code:
+L’exemple suivant ajoute la prise en charge de Razor Pages et de la prise en charge minimale du contrôleur. Le modèle d’application Web utilise ce code :
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -140,7 +148,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-Les nouvelles méthodes peuvent également être combinées. L’exemple suivant est équivalent à l' `AddMvc` appel de dans ASP.net Core 2,2: 
+Les nouvelles méthodes peuvent également être combinées. L’exemple suivant est équivalent à l' `AddMvc` appel de dans ASP.net Core 2,2 : 
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -152,7 +160,7 @@ public void ConfigureServices(IServiceCollection services)
 
 ## <a name="update-routing-startup-code"></a>Mettre à jour le code de démarrage du routage
 
-Si une application appelle `UseMvc` ou `UseSignalR`, migrez l’application vers le [routage des points de terminaison](xref:fundamentals/routing) , si possible. Pour améliorer la compatibilité du routage des points de terminaison avec les versions précédentes de MVC, nous avons rétabli certaines des modifications apportées à la génération d’URL introduites dans ASP.NET Core 2,2. Si vous avez rencontré des problèmes lors de l’utilisation du routage de point de terminaison dans 2,2, attendez-vous à des améliorations de ASP.NET Core 3,0, avec les exceptions suivantes:
+Si une application appelle `UseMvc` ou `UseSignalR`, migrez l’application vers le [routage des points de terminaison](xref:fundamentals/routing) , si possible. Pour améliorer la compatibilité du routage des points de terminaison avec les versions précédentes de MVC, nous avons rétabli certaines des modifications apportées à la génération d’URL introduites dans ASP.NET Core 2,2. Si vous avez rencontré des problèmes lors de l’utilisation du routage de point de terminaison dans 2,2, attendez-vous à des améliorations de ASP.NET Core 3,0, avec les exceptions suivantes :
 
 * Si l’application implémente `IRouter` ou hérite de `Route`, vous souhaiterez peut-être éviter la migration à ce stade. Fournir des commentaires au [plan de la migration des implémentations basées sur IRouter sur le routage des points de terminaison](https://github.com/aspnet/AspNetCore/issues/4221).
 
@@ -164,7 +172,7 @@ Pour la plupart des applications `Startup` , nécessite uniquement des modificat
 
 ### <a name="migrate-startupconfigure"></a>Migrer Startup. configure
 
-Conseils généraux:
+Conseils généraux :
 
 * Ajoutez `UseRouting`. 
 * Si l’application appelle `UseStaticFiles`, placez `UseStaticFiles` -la **avant** `UseRouting`.
@@ -173,7 +181,7 @@ Conseils généraux:
 * Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciels qui utilise cors (par exemple, `UseCors` placez `UseAuthentication`avant `UseAuthorization`, et `UseMvc`).
 * Remplacez `IHostingEnvironment` `using` `Microsoft.Extensions.Hosting` par `IWebHostEnvironment` et ajoutez une instruction pour l’espace de noms.
 
-Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard:
+Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -196,7 +204,7 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-Après la mise à jour `Startup.Configure` du code précédent:
+Après la mise à jour `Startup.Configure` du code précédent :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -259,7 +267,7 @@ public class MyController : ControllerBase
 
 Dans les versions antérieures de ASP.net Core, la prise en charge de `[Authorize]` l’autorisation a été fournie via l’attribut. L’intergiciel d’autorisation n’est pas disponible. Dans ASP.NET Core 3,0, l’intergiciel (middleware) d’autorisation est requis. Nous vous recommandons de placer le ASP.net Core middleware d'`UseAuthorization`autorisation () `UseAuthentication`immédiatement après. L’intergiciel d’autorisation peut également être configuré avec une stratégie par défaut, qui peut être remplacée.
 
-Dans ASP.net Core 3,0 ou version ultérieure `UseAuthorization` , est appelé `Startup.Configure`dans, et les `HomeController` éléments suivants requièrent un utilisateur connecté:
+Dans ASP.net Core 3,0 ou version ultérieure `UseAuthorization` , est appelé `Startup.Configure`dans, et les `HomeController` éléments suivants requièrent un utilisateur connecté :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -289,7 +297,7 @@ public class HomeController : ControllerBase
 
 Si l’application utilise un `AuthorizeFilter` comme filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie dans l’appel `AddAuthorization`à.
 
-Le `DefaultPolicy` est initialement configuré pour exiger une authentification, de sorte qu’aucune configuration supplémentaire n’est requise. Dans l’exemple suivant, les points de terminaison MVC sont `RequireAuthorization` marqués comme afin que toutes les requêtes doivent être autorisées `DefaultPolicy`en fonction du. Toutefois, le `HomeController` autorise l’accès sans que l’utilisateur se `[AllowAnonymous]`connecte à l’application en raison des éléments suivants:
+Le `DefaultPolicy` est initialement configuré pour exiger une authentification, de sorte qu’aucune configuration supplémentaire n’est requise. Dans l’exemple suivant, les points de terminaison MVC sont `RequireAuthorization` marqués comme afin que toutes les requêtes doivent être autorisées `DefaultPolicy`en fonction du. Toutefois, le `HomeController` autorise l’accès sans que l’utilisateur se `[AllowAnonymous]`connecte à l’application en raison des éléments suivants :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -314,7 +322,7 @@ public class HomeController : ControllerBase
 }
 ```
 
-Les stratégies peuvent également être personnalisées. En s’appuyant sur l’exemple `DefaultPolicy` précédent, le est configuré pour exiger une authentification et une étendue spécifique:
+Les stratégies peuvent également être personnalisées. En s’appuyant sur l’exemple `DefaultPolicy` précédent, le est configuré pour exiger une authentification et une étendue spécifique :
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -354,7 +362,7 @@ public class HomeController : ControllerBase
 
 Sinon, tous les points de terminaison peuvent être configurés pour exiger `[Authorize]` l' `RequireAuthorization` autorisation sans ou en `FallbackPolicy`configurant un. `FallbackPolicy` Est différent `DefaultPolicy`de. Est déclenché par `[Authorize]` `FallbackPolicy` ou `RequireAuthorization`, tandis que est déclenché quand aucune autre stratégie n’est définie. `DefaultPolicy` `FallbackPolicy`est initialement configuré pour autoriser les demandes sans autorisation.
 
-L’exemple suivant est identique à l’exemple précédent `DefaultPolicy` , mais `FallbackPolicy` utilise pour toujours exiger l’authentification sur tous les points de terminaison `[AllowAnonymous]` sauf si est spécifié:
+L’exemple suivant est identique à l’exemple précédent `DefaultPolicy` , mais `FallbackPolicy` utilise pour toujours exiger l’authentification sur tous les points de terminaison `[AllowAnonymous]` sauf si est spécifié :
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -393,7 +401,7 @@ public class HomeController : ControllerBase
 
 L’autorisation par intergiciel fonctionne sans que l’infrastructure ait une connaissance spécifique de l’autorisation. Par exemple, les [contrôles d’intégrité](xref:host-and-deploy/health-checks) n’ont aucune connaissance spécifique de l’autorisation, mais les contrôles d’intégrité peuvent avoir une stratégie d’autorisation configurable appliquée par l’intergiciel (middleware).
 
-En outre, chaque point de terminaison peut personnaliser ses exigences d’autorisation. Dans l’exemple suivant, `UseAuthorization` traite l’autorisation `DefaultPolicy`avec, mais le `/healthz` point de terminaison de contrôle `admin` d’intégrité requiert un utilisateur:
+En outre, chaque point de terminaison peut personnaliser ses exigences d’autorisation. Dans l’exemple suivant, `UseAuthorization` traite l’autorisation `DefaultPolicy`avec, mais le `/healthz` point de terminaison de contrôle `admin` d’intégrité requiert un utilisateur :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -422,7 +430,7 @@ Le mappage des hubs Signalr est désormais effectué `UseEndpoints`à l’intér
 
 Mappez chaque concentrateur avec `MapHub`. Comme dans les versions précédentes, chaque concentrateur est explicitement listé.
 
-Dans l’exemple suivant, la prise en `ChatHub` charge du Hub signalr est ajoutée:
+Dans l’exemple suivant, la prise en `ChatHub` charge du Hub signalr est ajoutée :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -444,7 +452,7 @@ Le mappage de contrôleurs a désormais `UseEndpoints`lieu à l’intérieur de.
 
 Ajoutez `MapControllers` si l’application utilise le routage d’attributs. Dans la mesure où le routage inclut la prise en charge de nombreuses infrastructures dans ASP.NET Core 3,0 ou version ultérieure, l’ajout de contrôleurs routés par attribut est un abonnement. 
 
-Remplacez ce qui suit:
+Remplacez ce qui suit :
 
 * `MapRoute`avec`MapControllerRoute`
 * `MapAreaRoute`avec`MapAreaControllerRoute`
@@ -483,7 +491,7 @@ Le mappage de Razor Pages a maintenant `UseEndpoints`lieu à l’intérieur de.
 
 Ajoutez `MapRazorPages` si l’application utilise Razor pages. Dans la mesure où le routage des points de terminaison inclut la prise en charge de nombreuses infrastructures, l’ajout de Razor Pages est désormais un abonnement.
 
-Dans l’exemple suivant, `MapRazorPages` ajoute la prise en charge de Razor pages:
+Dans l’exemple suivant, `MapRazorPages` ajoute la prise en charge de Razor pages :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -503,7 +511,7 @@ public void Configure(IApplicationBuilder app)
 
 L’utilisation de `UseMvc` MVC `UseMvcWithDefaultRoute` via ou dans ASP.net Core 3,0 requiert un abonnement explicite à `Startup.ConfigureServices`l’intérieur de. Cela est nécessaire, car MVC doit savoir s’il peut reposer sur l’autorisation et l’intergiciel CORS pendant l’initialisation. Un analyseur est fourni pour avertir si l’application tente d’utiliser une configuration non prise en charge.
 
-Si l’application nécessite une `IRouter` prise en charge `EnableEndpointRouting` héritée, désactivez l' `Startup.ConfigureServices`une des approches suivantes dans:
+Si l’application nécessite une `IRouter` prise en charge `EnableEndpointRouting` héritée, désactivez l' `Startup.ConfigureServices`une des approches suivantes dans :
 
 ```csharp
 services.AddMvc(options => options.EnableEndpointRouting = false);
@@ -528,7 +536,7 @@ Les contrôles d’intégrité peuvent être utilisés en tant que *routeur* ave
 
 Ajoutez `MapHealthChecks` pour utiliser les vérifications d’intégrité avec routage du point de terminaison. La `MapHealthChecks` méthode accepte des arguments similaires `UseHealthChecks`à. L’avantage de l' `MapHealthChecks` utilisation `UseHealthChecks` de la valeur on est la possibilité d’appliquer une autorisation et d’avoir un contrôle plus précis de la stratégie de correspondance. 
 
-Dans l’exemple suivant, `MapHealthChecks` est appelé pour un point de terminaison de `/healthz`contrôle d’intégrité sur:
+Dans l’exemple suivant, `MapHealthChecks` est appelé pour un point de terminaison de `/healthz`contrôle d’intégrité sur :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -546,17 +554,17 @@ public void Configure(IApplicationBuilder app)
 
 ## <a name="hostbuilder-replaces-webhostbuilder"></a>HostBuilder remplace WebHostBuilder
 
-Les modèles ASP.NET Core 3,0 utilisent l' [hôte générique](xref:fundamentals/host/generic-host). Les versions précédentes utilisaient l' [hôte Web](xref:fundamentals/host/web-host). Le code suivant illustre la classe générée `Program` par le modèle ASP.net Core 3,0:
+Les modèles ASP.NET Core 3,0 utilisent l' [hôte générique](xref:fundamentals/host/generic-host). Les versions précédentes utilisaient l' [hôte Web](xref:fundamentals/host/web-host). Le code suivant illustre la classe générée `Program` par le modèle ASP.net Core 3,0 :
 
 [!code-csharp[](22-to-30/samples/Program.cs?name=snippet)]
 
-Le code suivant illustre la classe ASP.net Core 2,2 générée `Program` par le modèle:
+Le code suivant illustre la classe ASP.net Core 2,2 générée `Program` par le modèle :
 
 [!code-csharp[](22-to-30/samples/Program2.2.cs?name=snippet)]
 
 <xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder>reste dans 3,0 et est le type de la `webBuilder` vue dans l’exemple de code précédent. <xref:Microsoft.AspNetCore.Hosting.WebHostBuilder>sera dépréciée dans une version ultérieure et remplacée par `HostBuilder`.
 
-La modification la plus significative `WebHostBuilder` de `HostBuilder` en est l' [injection de dépendances (di)](xref:fundamentals/dependency-injection). Lorsque vous `HostBuilder`utilisez, vous pouvez uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> injecter `Startup`et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur de. Contraintes `HostBuilder` di:
+La modification la plus significative `WebHostBuilder` de `HostBuilder` en est l' [injection de dépendances (di)](xref:fundamentals/dependency-injection). Lorsque vous `HostBuilder`utilisez, vous pouvez uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> injecter `Startup`et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur de. Contraintes `HostBuilder` di :
 
 * Autorisez la génération du conteneur DI une seule fois.
 * Évite les problèmes de durée de vie des objets résultants, tels que la résolution de plusieurs instances de singletons.
@@ -591,10 +599,10 @@ new HubConnectionBuilder()
 
 ### <a name="switch-to-newtonsoftjson"></a>Basculer vers Newtonsoft. JSON
 
-Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `System.Text.Json`prises en charge dans, vous `Newtonsoft.Json`pouvez revenir à:
+Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `System.Text.Json`prises en charge dans, vous `Newtonsoft.Json`pouvez revenir à :
 
 1. Installez le package NuGet [Microsoft. AspNetCore. signalr. Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
-1. Sur le client, chaînez `AddNewtonsoftJsonProtocol` un appel de méthode `HubConnectionBuilder` à l’instance:
+1. Sur le client, chaînez `AddNewtonsoftJsonProtocol` un appel de méthode `HubConnectionBuilder` à l’instance :
 
     ```csharp
     new HubConnectionBuilder()
@@ -603,7 +611,7 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `Syst
         .Build();
     ```
 
-1. Sur le serveur, chaînez `AddNewtonsoftJsonProtocol` un appel de méthode `AddSignalR` à l’appel `Startup.ConfigureServices`de méthode dans:
+1. Sur le serveur, chaînez `AddNewtonsoftJsonProtocol` un appel de méthode `AddSignalR` à l’appel `Startup.ConfigureServices`de méthode dans :
 
     ```csharp
     services.AddSignalR()
