--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/03/2019
 uid: migration/22-to-30
-ms.openlocfilehash: c53357f1cebad1e148925052c84bc3b3d8de4d8b
-ms.sourcegitcommit: e6bd2bbe5683e9a7dbbc2f2eab644986e6dc8a87
+ms.openlocfilehash: 97472d6fd467cd471590106d271acd448c852468
+ms.sourcegitcommit: 8b36f75b8931ae3f656e2a8e63572080adc78513
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/03/2019
-ms.locfileid: "70238117"
+ms.lasthandoff: 09/05/2019
+ms.locfileid: "70310489"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -445,6 +445,17 @@ public void Configure(IApplicationBuilder app)
     });
 }
 ```
+
+Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices`:
+
+```csharp
+services.AddSignalR(hubOptions =>
+{
+    hubOptions.MaximumReceiveMessageSize = 32768;
+});
+```
+
+Dans ASP.net Core 2,2, vous pouviez définir la `TransportMaxBufferSize` valeur et pour contrôler la taille de message maximale. Dans ASP.NET Core 3,0, cette option contrôle désormais uniquement la taille maximale avant que la contre-pression soit observée.
 
 ### <a name="migrate-mvc-controllers"></a>Migrer des contrôleurs MVC
 
