commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 09/03/2019
+ms.date: 09/06/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 97472d6fd467cd471590106d271acd448c852468
-ms.sourcegitcommit: 8b36f75b8931ae3f656e2a8e63572080adc78513
+ms.openlocfilehash: f5ac089918fa8fbe42dec8aa34b1223c0c6a0adf
+ms.sourcegitcommit: f65d8765e4b7c894481db9b37aa6969abc625a48
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/05/2019
-ms.locfileid: "70310489"
+ms.lasthandoff: 09/06/2019
+ms.locfileid: "70773636"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -179,7 +179,9 @@ Conseils généraux :
 * Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting` (et **après** `UseCors` l’utilisation de l’intergiciel (middleware) cors).
 * Remplacez `UseMvc` ou `UseSignalR` par .`UseEndpoints`
 * Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciels qui utilise cors (par exemple, `UseCors` placez `UseAuthentication`avant `UseAuthorization`, et `UseMvc`).
-* Remplacez `IHostingEnvironment` `using` `Microsoft.Extensions.Hosting` par `IWebHostEnvironment` et ajoutez une instruction pour l’espace de noms.
+* Remplacez `IHostingEnvironment` `using` <xref:Microsoft.Extensions.Hosting?displayProperty=fullName> par `IWebHostEnvironment` et ajoutez une instruction pour l’espace de noms.
+* Remplacez `IApplicationLifetime` par <xref:Microsoft.Extensions.Hosting.IHostApplicationLifetime> (<xref:Microsoft.Extensions.Hosting?displayProperty=fullName> espace de noms).
+* Remplacez `EnvironmentName` par <xref:Microsoft.Extensions.Hosting.Environments> (<xref:Microsoft.Extensions.Hosting?displayProperty=fullName> espace de noms).
 
 Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard :
 
