commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/06/2019
 uid: migration/22-to-30
-ms.openlocfilehash: f5ac089918fa8fbe42dec8aa34b1223c0c6a0adf
-ms.sourcegitcommit: f65d8765e4b7c894481db9b37aa6969abc625a48
+ms.openlocfilehash: 946ee4f993ca636bed178331896ca98d3d924f57
+ms.sourcegitcommit: 092061c4f6ef46ed2165fa84de6273d3786fb97e
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/06/2019
-ms.locfileid: "70773636"
+ms.lasthandoff: 09/13/2019
+ms.locfileid: "70964169"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -166,7 +166,7 @@ Si une application appelle `UseMvc` ou `UseSignalR`, migrez l’application vers
 
 * Si l’application accède `RouteData.Routers` directement à MVC, vous souhaiterez peut-être éviter la migration à ce stade. Fournissez des commentaires lors [de la migration pour l’utilisation de RouteData. routeurs](https://github.com/aspnet/AspNetCore/issues/9148).
 
-Le routage des points de terminaison prend en charge les mêmes syntaxe de modèle d' `IRouter`itinéraire et fonctionnalités de création de modèle de routage que. Le routage des `IRouteContraint`points de terminaison prend en charge. Le routage des `[Route]`points `[HttpGet]`de terminaison prend en charge, et les autres attributs de routage Mvc.
+Le routage des points de terminaison prend en charge les mêmes syntaxe de modèle d' `IRouter`itinéraire et fonctionnalités de création de modèle de routage que. Le routage des `IRouteConstraint`points de terminaison prend en charge. Le routage des `[Route]`points `[HttpGet]`de terminaison prend en charge, et les autres attributs de routage Mvc.
 
 Pour la plupart des applications `Startup` , nécessite uniquement des modifications.
 
@@ -581,6 +581,22 @@ La modification la plus significative `WebHostBuilder` de `HostBuilder` en est l
 
 * Autorisez la génération du conteneur DI une seule fois.
 * Évite les problèmes de durée de vie des objets résultants, tels que la résolution de plusieurs instances de singletons.
+
+## <a name="addauthorization-moved-to-a-different-assembly"></a>AddAuthorization déplacé vers un autre assembly
+
+Les méthodes ASP.net Core 2,2 et `AddAuthorization` Lower dans *Microsoft. AspNetCore. Authorization. dll*:
+
+* Ont été renommés `AddAuthorizationCore`.
+* Ont été déplacés vers *Microsoft. AspNetCore. Authorization. Policy. dll*.
+
+Les applications qui utilisent à la fois *Microsoft. AspNetCore. Authorization. dll* et *Microsoft. AspNetCore. Authorization. Policy. dll* ne sont pas affectées.
+
+Les applications qui n’utilisent pas *Microsoft. AspNetCore. Authorization. Policy. dll* doivent effectuer l’une des opérations suivantes :
+
+* Basculer vers using`AddAuthorizationCore`
+* Ajoutez une référence à *Microsoft. AspNetCore. Authorization. Policy. dll*.
+
+Pour plus d’informations, consultez [modification avec `AddAuthorization(o =>`rupture dans) dans un assembly différent #386](https://github.com/aspnet/Announcements/issues/386).
 
 ## <a name="update-signalr-code"></a>Mettre à jour le code Signalr
 
