commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/06/2019
 uid: migration/22-to-30
-ms.openlocfilehash: aeaf21b8b2f973946aa469ada1796d67d1b5bba1
-ms.sourcegitcommit: 805f625d16d74e77f02f5f37326e5aceafcb78e3
+ms.openlocfilehash: c4b95a2acd0181e6389533709789fe97ff22ffb9
+ms.sourcegitcommit: 215954a638d24124f791024c66fd4fb9109fd380
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/13/2019
-ms.locfileid: "70985582"
+ms.lasthandoff: 09/18/2019
+ms.locfileid: "71081639"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -153,7 +153,7 @@ Les nouvelles méthodes peuvent également être combinées. L’exemple suivant
 ```csharp
 public void ConfigureServices(IServiceCollection services)
 {
-    services.AddControllers();
+    services.AddControllersWithViews();
     services.AddRazorPages();
 }
 ```
@@ -178,7 +178,7 @@ Conseils généraux :
 * Si l’application appelle `UseStaticFiles`, placez `UseStaticFiles` -la **avant** `UseRouting`.
 * Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting` (et **après** `UseCors` l’utilisation de l’intergiciel (middleware) cors).
 * Remplacez `UseMvc` ou `UseSignalR` par .`UseEndpoints`
-* Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciels qui utilise cors (par exemple, `UseCors` placez `UseAuthentication`avant `UseAuthorization`, et `UseMvc`).
+* Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciel qui utilise cors (par exemple, placez `UseCors` avant `UseAuthentication`, `UseAuthorization`et `UseEndpoints`).
 * Remplacez `IHostingEnvironment` `using` <xref:Microsoft.Extensions.Hosting?displayProperty=fullName> par `IWebHostEnvironment` et ajoutez une instruction pour l’espace de noms.
 * Remplacez `IApplicationLifetime` par <xref:Microsoft.Extensions.Hosting.IHostApplicationLifetime> (<xref:Microsoft.Extensions.Hosting?displayProperty=fullName> espace de noms).
 * Remplacez `EnvironmentName` par <xref:Microsoft.Extensions.Hosting.Environments> (<xref:Microsoft.Extensions.Hosting?displayProperty=fullName> espace de noms).
@@ -600,6 +600,10 @@ Pour plus d’informations, consultez [modification avec `AddAuthorization(o =>`
 
 ## <a name="update-signalr-code"></a>Mettre à jour le code Signalr
 
+Le client JavaScript signalr est passé de `@aspnet/signalr` à `@microsoft/signalr`. Pour réagir à cette modification, modifiez les références dans les fichiers *Package. JSON* , les instructions require et les instructions Import ECMAScript.
+
+### <a name="systemtextjson-is-the-default-protocol"></a>System. Text. JSON est le protocole par défaut
+
 `System.Text.Json`est maintenant le protocole de concentrateur par défaut utilisé par le client et le serveur.
 
 Dans `Startup.ConfigureServices`, appelez `AddJsonProtocol` pour définir les options du sérialiseur.
@@ -649,4 +653,4 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `Syst
 
 ## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
-Dans 3,0, la compilation du runtime est un scénario d’abonnement. Pour activer la compilation au moment https://docs.microsoft.com/aspnet/core/mvc/views/view-compilation?view=aspnetcore-3.0#runtime-compilation de l’exécution, consultez.
+Dans 3,0, la compilation du runtime est un scénario d’abonnement. Pour activer la compilation au moment <xref:mvc/views/view-compilation#runtime-compilation>de l’exécution, consultez.
